re label indexes. introduce a 3rd indexes

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+
+.all-lists {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
